Resolves: fdo#33092 don't override autotext language if already the default